--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "${PORT}:3000"
+      - "${PORT}:${PORT}"
     environment:
       - NODE_ENV=production
       - VERSION=${VERSION}
