--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "jiti": "^2.4.2",
     "lucide-react": "^0.468.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
